preliminary algo for recipe ingredient tagging

--- a/src/main/resources/templates/mealplan.html
+++ b/src/main/resources/templates/mealplan.html
@@ -183,6 +183,13 @@
                   </date>
                 </div>
               </div>
+              <a
+                    th:href="@{/user/mealplans/shoppinglist(mealPlan=${mealPlan.id})}"
+                    type="button"
+                    class="btn btn-secondary btn-sm"
+                  >
+                    Get Shopping List
+              </a>
             </div>
           </div>
         </div>
