ingredient, ingredient dto & ingredient tag dto, data for common ingredient, preliminary ingredient tagging against common ingredients

--- a/src/main/resources/templates/shopping-list.html
+++ b/src/main/resources/templates/shopping-list.html
@@ -83,12 +83,14 @@
                 <th>Amount</th>
                 <th>Measure</th>
                 <th>Name</th>
+                <th>DB Names</th>
                 <th>Note</th>
               </tr>
               <tr th:each="ingredient, iter : ${ingredientDtos}" th:style="${iter.index % 2 == 0 ? 'background-color: #eee' : 'background-color: none'}">
                 <td th:text="${ingredient.amount}" />
                 <td th:text="${ingredient.measure}" />
                 <td th:text="${ingredient.name}" />
+                <td th:text="${ingredient.dbName}"/>
                 <td th:text="${ingredient.note}" />
               </tr>
             </table>
