refactor - move to shopping list controller, ingredient tagging algo modification to give ingredients of combo words higher preference

--- a/src/main/resources/templates/mealplan.html
+++ b/src/main/resources/templates/mealplan.html
@@ -184,7 +184,7 @@
                 </div>
               </div>
               <a
-                    th:href="@{/user/mealplans/shoppinglist(mealPlan=${mealPlan.id})}"
+                    th:href="@{/user/shoppinglist(mealPlan=${mealPlan.id})}"
                     type="button"
                     class="btn btn-secondary btn-sm"
                   >
