something about shopping list

--- a/src/main/resources/templates/shopping-list.html
+++ b/src/main/resources/templates/shopping-list.html
@@ -77,7 +77,7 @@
               </p>
             </div>
 
-            <h1>Consolidated Table</h1>
+            <h1>Ingredient Tagging Table</h1>
 
             <table>
               <tr style="background-color: #666666; color: white">
