--- a/src/main/resources/templates/shopping-list.html
+++ b/src/main/resources/templates/shopping-list.html
@@ -125,9 +125,13 @@
             <h1 style="background-color: #999; color: white">Shopping List</h1>
             <div th:each="category : ${shoppingList}">
               <h3 th:text="${category.key}" />
-              <div
+              <!-- <div
                 th:each="ingredient : ${category.value}"
                 th:if="${ingredient.key != 'Salt' && ingredient.key != 'Black pepper'}"
+                class="row"
+              > -->
+              <div
+                th:each="ingredient : ${category.value}"
                 class="row"
               >
                 <div
