--- a/src/main/resources/templates/_index.html
+++ b/src/main/resources/templates/_index.html
@@ -38,46 +38,9 @@
     </div>
 </nav>
 
-<div class="d-flex full-height-header-footer">
-  
-        <div class="cover_column" style='background-image:url("/img/dish_1_s.png")'>
-            <div class="cover_column_text">
-                <h2>Delicious</h2>
-                <p>Mouth watering dishes right at your finger tip</p>
-            </div>
-            
-        </div>
-        <div class="cover_column" style='background-image:url("/img/dish_2_s.png")'>
-            <div class="cover_column_text">
-                <h2>Easy</h2>
-                <p>Discover super easy recipes in no time</p>
-            </div>
-            
-        </div>
-        <div class="cover_column" style='background-image:url("/img/dish_3_s.png")'>
-            <div class="cover_column_text">
-                <h2>Organized</h2>
-                <p>Creating weekly meal plan and generate a personalized shopping list</p>
-            </div>
-            
-        </div>
-        <div class="cover_column" style='background-image:url("/img/dish_4_s.png")'>
-            <div class="cover_column_text">
-               <h2>Quick</h2> 
-               <p>Easy and quick recipes that takes no more than 30 minutes to create</p>
-            </div>
-            
-            
-        </div>
-        <div class="cover_column" style='background-image:url("/img/dish_5_s.png")'>
-            <div class="cover_column_text">
-                <h2>Personalized</h2>
-                <p>Discover quick recipes based on your dietary preference or the ingredients you have in your fridge</p>
-            </div>
-        </div>
-        <div class="cover_column_full_text_overlay d-flex align-items-center justify-content-center">
-            <h1 class="text-center" style="color: white;"> Find Quick Meal Ideas in No Time with the help of ChatGPT </h1>
-        </div>
+<div class="container min-full-height">
+    <div class="row">
+        <h1 class="text-center"> Find Quick Meal Ideas in No Time with the help of ChatGPT </h1>
     </div>
 </div>
 <footer th:replace="~{fragments/general :: footer}" >
