--- a/src/main/resources/templates/recipe.html
+++ b/src/main/resources/templates/recipe.html
@@ -75,7 +75,7 @@
           </div>
         </div>
 
-        <div class="col-md-6 col-lg-7 dashboard-content-container-wrapper">
+        <div class="col-md-6 col-lg-7 dashboard-content-container-wrapper recipe">
           <div class="recipe-wrapper">
             <a
                 th:if="${savedByUser}"
