--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -6,6 +6,73 @@ body {
     min-height: calc(100vh - 56px - 73px);
 }
 
+.full-height-header-footer {
+    height: calc(100vh - 56px - 73px);
+    position: relative;
+}
+
+.cover_column {
+    width: 20%;
+    position:relative;
+}
+
+.cover_column::before {
+    content: "";
+    background-color: rgba(0,0,0,.4);
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    transition: all .3s;
+    width: 100%;
+}
+
+.cover_column:hover::before {
+    background-color: rgba(0,0,0,.2);
+}
+
+.cover_column_text {
+    opacity: 0;
+    color: white;
+    width: 80%;
+    padding: 30px 20px 20px;
+    background: #00000040;
+    z-index: 999;
+    position: relative;
+    margin-top: 30px;
+    transition: all .3s;
+
+}
+
+.cover_column:hover > .cover_column_text {
+    opacity: 1;
+}
+
+.cover_column_full_text_overlay {
+    position: absolute;
+    width: 100%;
+    bottom: 200px;
+
+
+}
+
+.dish-collage-bg {
+    background-image: url('/img/dishes_collage.png'); 
+    background-size: cover;
+    position:relative;
+}
+
+.dish-collage-bg::before {
+    content: "";
+    background-color: rgba(0,0,0,.4);
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+}
+
+
 .dashboard-container {
     display: flex;
 }
@@ -50,6 +117,16 @@ body {
 .dashboard-content-container-wrapper {
     padding: 3rem;
 }
+.dashboard-content-container-wrapper:not(.recipe, .shopping-list) {
+
+    background-image: url("/img/dish_5.png");
+    background-repeat: no-repeat;
+    background-size: 40%;
+    background-position-y: bottom -100px;
+    background-position-x: left -100px;
+}
+
+
 
 .dashboard-content-container-wrapper .row .card {
     width: 100%;
@@ -278,3 +355,17 @@ body {
 .sideBar-menu-item:hover > .sideBar-menu-item-label {
     display: block;
 }
+
+.ingredient-category {
+    margin: 20px 0 10px;
+}
+
+.ingredient-line {
+    padding: 5px;
+}
+
+.ingredient-line.even {
+    background: #eeeeee;
+}
+
+
