--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,93 +1,100 @@
 <!DOCTYPE html>
-<html lang="en"
-    xmlns:th="http://www.thymeleaf.org"
->
-<head>
-    <meta charset="UTF-8">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+  <head>
+    <meta charset="UTF-8" />
     <title>Quick Meal Planner</title>
-    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-          crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
 
-</head>
-<body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
         <a class="navbar-brand" th:href="@{/index}">Quick Meal Planner</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse"  style="flex-grow:inherit;" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/register}">Register</a>
-                </li>
-            </ul>
+        <div
+          class="collapse navbar-collapse"
+          style="flex-grow: inherit"
+          id="navbarSupportedContent"
+        >
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" th:href="@{/register}">Register</a>
+            </li>
+          </ul>
         </div>
-    </div>
-</nav>
-<div class="container min-full-height">
-    <div class="row">
-        <div class="col-md-6 offset-md-3">
-
-            <div th:if="${param.error}">
-                <div class="alert alert-danger">Invalid Email or Password</div>
-            </div>
-            <div th:if="${param.logout}">
-                <div class="alert alert-success"> You have been logged out.</div>
-            </div>
-
-
-            <div class="card">
-                <div class="card-header">
-                    <h2 class="text-center">Login Form</h2>
-                </div>
-                <div class="card-body">
-                    <form
-                        method="post"
-                        role="form"
-                        th:action="@{/login}"
-                        class="form-horizontal"
-                    >
-                        <div class="form-group mb-3">
-                            <label class="control-label">Email</label>
-                            <input
-                                type="text"
-                                id="username"
-                                name="username"
-                                class="form-control"
-                                placeholder="Enter email address"
-                            />
-                        </div>
-
-                        <div class="form-group mb-3">
-                            <label class="control-label"> Password</label>
-                            <input
-                                    type="password"
-                                    id="password"
-                                    name="password"
-                                    class="form-control"
-                                    placeholder="Enter password"
-                            />
-                        </div>
-                        <div class="form-group mb-3">
-                            <button type="submit" class="btn btn-primary" >Submit</button>
-                            <span> Not registered ?
-                                <a th:href="@{/register}">Register/Signup here</a>
-                            </span>
-                           
-                        </div>
-                    </form>
-                </div>
-            </div>
+      </div>
+    </nav>
+    <div class="min-full-height d-flex justify-content-center align-items-center dish-collage-bg">
+      <div class="col-md-6" style="box-shadow: 0 0 20px #00000060;">
+        <div th:if="${param.error}">
+          <div class="alert alert-danger">Invalid Email or Password</div>
         </div>
+        <div th:if="${param.logout}">
+          <div class="alert alert-success">You have been logged out.</div>
+        </div>
+
+        <div class="card">
+          <div class="card-header">
+            <h2 class="text-center">Login</h2>
+          </div>
+          <div class="card-body">
+            <form
+              method="post"
+              role="form"
+              th:action="@{/login}"
+              class="form-horizontal"
+            >
+              <div class="form-group mb-3">
+                <label class="control-label">Email</label>
+                <input
+                  type="text"
+                  id="username"
+                  name="username"
+                  class="form-control"
+                  placeholder="Enter email address"
+                />
+              </div>
+
+              <div class="form-group mb-3">
+                <label class="control-label"> Password</label>
+                <input
+                  type="password"
+                  id="password"
+                  name="password"
+                  class="form-control"
+                  placeholder="Enter password"
+                />
+              </div>
+              <div class="form-group mt-4 mb-2 d-flex justify-content-between">
+                <button type="submit" class="btn btn-primary">Submit</button>
+                <span>
+                  Not registered ?
+                  <a th:href="@{/register}">Register/Signup here</a>
+                </span>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
-<footer th:replace="~{fragments/general :: footer}" >
-    <p>Testing Footer</p>
-</footer>
-</body>
+    <footer th:replace="~{fragments/general :: footer}">
+      <p>Testing Footer</p>
+    </footer>
+  </body>
 </html>
