--- a/src/main/resources/templates/mealplan.html
+++ b/src/main/resources/templates/mealplan.html
@@ -187,6 +187,7 @@
                     th:href="@{/user/shoppinglist(mealPlan=${mealPlan.id})}"
                     type="button"
                     class="btn btn-secondary btn-sm"
+                    style="position: absolute; right: 4rem;"
                   >
                     Get Shopping List
               </a>
