--- a/src/main/resources/templates/get-recipe.html
+++ b/src/main/resources/templates/get-recipe.html
@@ -68,7 +68,7 @@
             <p>Testing Side Nav</p>
           </div>
         </div>
-        <div class="col-md-9 col-lg-10 dashboard-content-container-wrapper">
+        <div class="col-md-9 col-lg-10 dashboard-content-container-wrapper recipe">
           <div class="row">
             <h3 th:text="${recipe.name}" id="recipeName" />
             <h5>Ingredients:</h5>
