--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@
         <div class="cover_column" style='background-image:url("/img/dish_1_s.png")'>
             <div class="cover_column_text">
                 <h2>Delicious</h2>
-                <p>Mouth watering dishes right at your finger tip</p>
+                <p>Mouth watering recipes right at your finger tip</p>
             </div>
             
         </div>
@@ -76,7 +76,9 @@
             </div>
         </div>
         <div class="cover_column_full_text_overlay d-flex align-items-center justify-content-center">
-            <h1 class="text-center" style="color: white;"> Find Quick Meal Ideas in No Time with the help of ChatGPT </h1>
+            <h1 class="text-center" style="color: white;text-shadow: 0 0 10px black;"> 
+                Find Quick Meal Ideas in No Time with the help of ChatGPT 
+            </h1>
         </div>
     </div>
 </div>
