--- a/src/main/resources/templates/mealplan.html
+++ b/src/main/resources/templates/mealplan.html
@@ -203,7 +203,13 @@
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="savedRecipeModalTitle">Saved Recipes</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <button 
+              type="button" 
+              class="close btn" 
+              data-dismiss="modal" 
+              aria-label="Close" 
+              style="border: 1px solid green;border-radius: 50%;color: green;font-weight: 900;line-height: 1.3;"
+            >
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
