--- a/src/main/resources/templates/get-recipe.html
+++ b/src/main/resources/templates/get-recipe.html
@@ -71,17 +71,17 @@
         <div class="col-md-9 col-lg-10 dashboard-content-container-wrapper recipe">
           <div class="row">
             <h3 th:text="${recipe.name}" id="recipeName" />
-            <h5>Ingredients:</h5>
+            <h5 style="margin: 30px 0 20px 0;">Ingredients:</h5>
             <div th:each="ingredient: ${recipe.ingredients}">
               <p th:text="${ingredient}" class="ingredients" />
             </div>
-            <h5>Directions:</h5>
+            <h5 style="margin: 30px 0 20px 0;">Directions:</h5>
             <div th:each="direction, directionStat: ${recipe.directions}">
               <p th:text="${direction}" class="directions" />
             </div>
             
           </div>
-          <button id="saveButton" class="btn btn-info btn-sm">
+          <button id="saveButton" class="btn btn-info btn-sm mt-4" >
               Save Recipe To My Collection
           </button>
         </div>
