--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -17,7 +17,10 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" th:href="@{/index}">Quick Meal Planner</a>
+    <a class="navbar-brand header-logo" th:href="@{/index}"> 
+      <img src="/img/meal_5.png" />
+      SnapChef
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
