--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,15 +1,39 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600;700;800&display=swap');
+
 body {
     min-height: 100vh;
 }
 
 .min-full-height {
-    min-height: calc(100vh - 56px - 73px);
+    min-height: calc(100vh - 62px - 73px);
 }
 
 .full-height-header-footer {
-    height: calc(100vh - 56px - 73px);
+    height: calc(100vh - 62px - 73px);
     position: relative;
 }
+nav.navbar {
+    height: 62px;
+}
+.nav-link, .nav-link {
+    color: #666666;
+}
+.nav-link:focus, .nav-link:hover {
+    color: #222222;
+}
+a.header-logo {
+    font-size: 1.8rem;
+    display: flex;
+    align-items: center;
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 700;
+    padding: 0 10px;
+}
+a.header-logo img {
+    width: 3rem;
+    margin: -2px 10px 0 0;
+}
+
 
 .cover_column {
     width: 20%;
@@ -98,20 +122,19 @@ body {
 }
 .dashboard-nav-container .nav-item a.nav-link {
     padding: 1rem 1.5rem;
-    /* border-bottom: 1px solid #eee; */
     color: #333;
     border-radius: 10px;
 }
+
+.dashboard-nav-container .nav-item a.nav-link:hover {
+    background-color: #eee;
+} 
 
 .dashboard-nav-container .nav-item {
     padding: 0.5rem 0.8rem;
 }
 .dashboard-nav-container .nav-item a.nav-link.active {
     background-color:#c6c6c6;
-    /* color: white; */
-    /* padding: 1rem 1.5rem; */
-    /* border-left: 15px solid salmon;
-    width: calc(100% + 15px); */
 }
 
 .dashboard-content-container-wrapper {
