--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -16,7 +16,10 @@
       class="navbar navbar-expand-lg navbar-dark bg-dark"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/index}">Quick Meal Planner</a>
+        <a class="navbar-brand header-logo" th:href="@{/index}"> 
+          <img src="/img/meal_5.png" />
+          SnapChef
+        </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -99,7 +102,7 @@
       th:fragment="footer"
       class="d-flex flex-wrap justify-content-around align-items-center py-3 border-top"
     >
-      <p class="col-md-4 mb-0 text-body-secondary">© 2023 Quick Meal Planner</p>
+      <p class="col-md-4 mb-0 text-body-secondary">© 2023 SnapChef</p>
       <ul class="nav col-md-4 justify-content-end">
         <li class="nav-item">
           <a href="/index" class="nav-link px-2 text-body-secondary">Home</a>
