--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,7 +15,10 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/index}">Quick Meal Planner</a>
+        <a class="navbar-brand header-logo" th:href="@{/index}"> 
+          <img src="/img/meal_5.png" />
+          SnapChef
+        </a>
         <button
           class="navbar-toggler"
           type="button"
